src/objects/CO_Section_Detail__c.object
<CustomObject>
    <fields>
        <fullName>CO_Header__c</fullName>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>CO Section Details</relationshipLabel>
        <relationshipName>CO_Section_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_CO_Type_Quote__c</fullName>
        <formula>ISPICKVAL(CO_Header__r.Order_status__c, &apos;Quote&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is CO Type Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CO_Section_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Section_Type__c</fullName>
        <label>Section Type</label>
        <picklist>
            <picklistValues>
                <fullName>Merchandise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Merchandise</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Order_Status__c</fullName>
        <label>Special Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All in-stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SO_Status_Priority_Number__c</fullName>
        <formula>if( ISPICKVAL(Special_Order_Status__c, &apos;All in-stock&apos;), 1, 
	if( ISPICKVAL(Special_Order_Status__c, &apos;Need to order&apos;), 2, 
		if( ISPICKVAL(Special_Order_Status__c, &apos;Order submitted&apos;), 3, 
			if( ISPICKVAL(Special_Order_Status__c, &apos;None&apos;), 4, 
				if( ISPICKVAL(Special_Order_Status__c, &apos;Fulfilled&apos;), 5, 6)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Status Priority Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>CO Section Detail</label>
    <nameField>
        <displayFormat>COSection-{00000000}</displayFormat>
        <label>CO Section Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Section Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>